activities: fix not scrolling on overflow
This adds css needed to make the activities tab view contents scroll
appropriately when the contents don't fit vertically.

Fixes: https://github.com/pybricks/support/issues/782

--- a/src/activities/activities.scss
+++ b/src/activities/activities.scss
@@ -26,6 +26,8 @@
     }
 
     &-tabview {
+        display: flex;
+        flex-direction: column;
         width: bp.$pt-grid-size * 25;
         padding: bp.$pt-grid-size;
         @include pb.background-contrast(0%);
