--- a/src/explorer/explorer.scss
+++ b/src/explorer/explorer.scss
@@ -4,12 +4,19 @@
 @use '@blueprintjs/core/lib/scss/variables' as bp;
 
 .pb-explorer {
+    min-height: 0;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
     &-header-toolbar {
         display: flex;
         justify-content: flex-end;
     }
 
     &-file-tree {
+        overflow-y: auto;
+
         // don't need extra padding around toolbar
         & .#{bp.$ns}-tree-node-secondary-label {
             padding: unset;
